# agent-marketplace

./: README.md
agent-marketplace/: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
agent-marketplace/src/agent_mesh/: __init__.py  api.py  cli.py  models.py  orchestrator.py  sandbox.py
agent-marketplace/src/agent_mesh/client/: __init__.py
agent-marketplace/src/agent_mesh/internal/: runner.py
agent-marketplace/src/agent_mesh/manifest/: __init__.py
agent-marketplace/src/agent_mesh/registry/: __init__.py  artifacts.py  remote.py
agent-marketplace/tests/: test_core.py  test_resilience.py
