[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-mesh"
version = "0.1.0"
description = "npm for AI agents — publish, discover, and install reusable agent packages"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Daniel López Orta", email = "daniellopezorta39@gmail.com" }]
keywords = [
    "agent", "marketplace", "registry", "npm", "package-manager",
    "multi-agent", "llm", "discovery", "reusable",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["click>=8.0", "pyyaml>=6.0", "rich>=13.0", "pydantic>=2.0", "opentelemetry-api>=1.20", "httpx>=0.25", "cryptography>=42.0", "fastapi>=0.100.0", "uvicorn>=0.23.0", "grpcio>=1.50.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
agent-mesh = "agent_mesh.cli:main"

[project.urls]
Homepage = "https://github.com/daniellopez882/agent-mesh"
Repository = "https://github.com/daniellopez882/agent-mesh"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
